Fix bold not showing for strong and b tags. Related to #50.
Just needed to tell the browser to use Helvetica Neue Bold where appropriate.

--- a/scss/custom/_wvu-base.scss
+++ b/scss/custom/_wvu-base.scss
@@ -1,8 +1,10 @@
 body {
-  font-family: $helvetica-neue-fallback;
-  .expanded-fonts-loaded & {
-    font-family: $helvetica-neue;
-  }
+  @include helvetica-neue($is-important: null); // Disable !important in this instance.
+}
+
+strong,
+b {
+  @include helvetica-neue-bold($is-important: null); // Disable !important in this instance.
 }
 
 a {
